# stock-advise

./: .gitignore  config.yaml  pyproject.toml
.github/workflows/: stock-advise.yml
scripts/: run.py  run_once.py  test_slack.py
src/: config.py  pipeline.py  scheduler.py
src/analysis/: claude_analyzer.py  models.py
src/collectors/: base.py  ipo_collector.py  newsapi_collector.py  rss_collector.py  twitter_collector.py
src/notifications/: slack_notifier.py
src/storage/: database.py  models.py
